# pyta

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: basic_usage.py  sample_data.py
src/finlib/: __init__.py  analytics.py  data.py  derived_indicators.py  indicators.py  portfolio.py  utils.py
src/pyta/: __init__.py
tests/: test_analytics.py  test_examples.py  test_indicators.py  test_portfolio.py
