[project]
name = "pyta-finance"
version = "0.1.1"
description = "Python technical analysis and finance indicator library."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2"
]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["finance", "technical-analysis", "trading", "indicators", "pandas"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8",
    "twine>=5",
]

[project.urls]
"Homepage" = "https://github.com/giwon4197/pyta"
"Source" = "https://github.com/giwon4197/pyta"
"Documentation" = "https://github.com/giwon4197/pyta#readme"

[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
